--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,12 +14,21 @@ body {
     box-sizing: border-box;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    margin: 0;
+}
+
+ul, ol {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
 .container {
     width: 100%;
     max-width: 1230px;
     margin: 0 auto;
     padding: 0 15px;
-
 }
 
 /* Header */
@@ -62,3 +71,163 @@ body {
 .nav__link.active {
     background-color: #004AF2;
 }
+
+/* Intro */
+
+.intro {
+    background: #000 url("../images/intro bg.jpg") no-repeat center / cover;
+}
+
+.intro__inner {
+    height: 600px;
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+}
+
+.intro__text {
+    text-align: right;
+    margin-bottom: 45px;
+}
+
+.intro__countries {
+    font-size: 15px;
+    color: #fff;
+}
+
+.intro__title {
+    position: relative;
+
+    font-size: 110px;
+    line-height: 0.9;
+    font-family: 'Lato', sans-serif;
+    font-weight: 700;
+    color: rgba(255, 255, 255, 0.8);
+}
+
+.intro__titile-amp {
+    font-size: 170px;
+    line-height: 1;
+    font-weight: 900;
+    color: rgba(255, 255, 255, 0.2);
+
+    position: absolute;
+    right: 0;
+    top: 50%;
+
+    transform: translateY(-50%);
+}
+
+/* Request form */
+
+.request-form {
+    width: 100%;
+    max-width: 400px;
+    overflow: hidden;
+
+    background-color: #004AF2;
+    border-radius: 5px;
+}
+
+.request-form--intro {
+    position: relative;
+    bottom: -30px;
+}
+
+.request-form__header {
+    padding: 20px 30px;
+
+    background-color: #033FC9;
+}
+
+.request-form-title {
+    font-family: 'Lato', sans-serif;
+    font-size: 30px;
+    font-weight: 900;
+    color: #fff;
+}
+
+.request-form__text {
+    font-size: 15px;
+    color: #fff;
+    line-height: 1.4;
+}
+
+.request-form__content {
+    padding: 30px;
+}
+
+/* Form */
+
+.form__group {
+    margin-bottom: 25px;
+}
+
+.input {
+    display: block;
+    width: 100%;
+    padding-bottom: 12px;
+    padding-left: 50px;
+
+    background: none;
+    border: none;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.25);
+
+    font-family: 'PT Sans', sans-serif;
+    font-size: 16px;
+    color: #fff;
+
+    transition: border-color 1s linear;
+}
+
+.input::placeholder {
+    color: #fff;
+
+}
+
+.input:focus {
+    outline: none;
+    border-bottom-color: #fff;
+}
+
+.input--user {
+    background: url("../images/user-icon.svg") left 15px top 5px no-repeat;
+}
+
+.input--phone {
+    background: url("../images/user-phone.svg") left 15px top 5px no-repeat;
+}
+
+.input--email {
+    background: url("../images/user-mail.svg") left 15px top 6px no-repeat;
+}
+
+/* Button */
+
+.btn {
+    display: inline-block;
+    vertical-align: top;
+    padding: 11px 20px;
+
+    font-family: 'PT Sans', sans-serif;
+    font-size: 18px;
+    line-height: 1.1;
+    color: #fff;
+    font-weight: 700;
+    text-align: center;
+    cursor: pointer;
+
+    background: #333;
+    border: none;
+    border-radius: 5px;
+}
+
+.btn--block {
+    display: block;
+    width: 100%;
+}
+
+.btn--orange {
+    background-image: linear-gradient(to right, #FF903E, #FF2C2C)
+}
+
