--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,10 @@ h1, h2, h3, h4, h5, h6 {
     margin: 0;
 }
 
+p {
+    margin: 0 0 10px;
+}
+
 ul, ol {
     margin: 0;
     padding: 0;
@@ -35,7 +39,7 @@ ul, ol {
 .header {
     width: 100%;
 
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: rgba(0, 0, 0, .2);
 
     position: fixed;
     top: 0;
@@ -75,6 +79,8 @@ ul, ol {
 /* Intro */
 
 .intro {
+    margin-bottom: 30px;
+
     background: #000 url("../images/intro bg.jpg") no-repeat center / cover;
 }
 
@@ -102,14 +108,14 @@ ul, ol {
     line-height: 0.9;
     font-family: 'Lato', sans-serif;
     font-weight: 700;
-    color: rgba(255, 255, 255, 0.8);
+    color: rgba(255, 255, 255, .8);
 }
 
 .intro__titile-amp {
     font-size: 170px;
     line-height: 1;
     font-weight: 900;
-    color: rgba(255, 255, 255, 0.2);
+    color: rgba(255, 255, 255, .2);
 
     position: absolute;
     right: 0;
@@ -171,7 +177,7 @@ ul, ol {
 
     background: none;
     border: none;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.25);
+    border-bottom: 1px solid rgba(255, 255, 255, .25);
 
     font-family: 'PT Sans', sans-serif;
     font-size: 16px;
@@ -230,4 +236,98 @@ ul, ol {
 .btn--orange {
     background-image: linear-gradient(to right, #FF903E, #FF2C2C)
 }
+
+/* Section */
+
+.section {
+    padding: 60px 0;
+}
+
+/* Services */
+
+.services {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 30px 0 50px;
+    position: relative;
+
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 5px 30px rgba(0, 0, 0, .2);
+
+}
+
+.services__main-title {
+    font-family: 'Lato', sans-serif;
+    font-size: 90px;
+    font-weight: 900;
+    color: rgba(44, 44, 44, .05);
+    pointer-events: none;
+
+    position: absolute;
+    right: 30px;
+    bottom: 12px;
+    z-index: 1;
+}
+
+.services__item {
+    display: flex;
+    flex-direction: column;
+    width: 25%;
+    padding: 0 25px;
+    margin-bottom: 30px;
+}
+
+.services__title {
+    margin-bottom: 20px;
+
+    font-family: 'Lato', sans-serif;
+    font-size: 24px;
+    font-weight: 900;
+    line-height: 1.2;
+    color: #2C2C2C;
+}
+
+.services__text {
+    margin-bottom: 20px;
+
+    font-size: 15px;
+    line-height: 1.4;
+    color: #585858;
+}
+
+.services__footer {
+    margin-top: auto;
+}
+
+.services__link {
+    display: inline-block;
+    font-size: 15px;
+    color: #004AF2;
+    text-decoration: none;
+
+    transition: color .1s linear;
+}
+
+.services__link:after {
+    content: "";
+    display: block;
+    width: 10px;
+    height: 2px;
+    margin-top: 5px;
+
+    background-color: #004AF2;
+
+    transition: width .1s linear;
+}
+
+.services__link:hover {
+    color: #FF3E2F;
+}
+
+.services__link:hover:after {
+    width: 100%;
+    background-color: #FF3E2F;
+}
+
 
