--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,14 @@ ul, ol {
     list-style: none;
 }
 
+.img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+/* Conteiner */
+
 .container {
     width: 100%;
     max-width: 1230px;
@@ -254,7 +262,7 @@ ul, ol {
     font-family: 'Lato', sans-serif;
     font-size: 45px;
     line-height: 1.2;
-    color: #2C2C2C
+    color: #2C2C2C;
     font-weight: 900;
 }
 
@@ -457,4 +465,76 @@ ul, ol {
 .reviews__content p:first-line {
     text-indent: 20px;
 }
+
+/* Benefits */
+
+.benefits {
+    display: flex;
+}
+
+.benefits__col {
+    width: 50%;
+}
+
+.benefits-list {
+    width: 100%;
+    max-width: 370px;
+    padding-left: 50px;
+    position: relative;
+
+    background-image: linear-gradient(to bottom, #fff 40%, #A5A5A5 40%);
+    background-size: 2px 35px;
+    background-repeat: repeat-y;
+    background-position: left 12px top 25px;
+}
+
+.benefits-list:before,
+.benefits-list:after {
+    content: "";
+    display: block;
+    width: 26px;
+    height: 36px;
+
+    background: no-repeat;
+    background-color: #fff;
+
+    position: absolute;
+    left: 0;
+    z-index: 1;
+
+}
+
+.benefits-list:before {
+    background-image: url(../images/pin-start.svg);
+    top: -10px;
+}
+
+.benefits-list:after {
+    background-image: url(../images/pin-end.svg);
+    bottom: -20px;
+}
+
+
+.benefits-list__item:not(:last-child) {
+    margin-bottom: 35px;
+}
+
+.benefits-list__title {
+    margin-bottom: 12px;
+
+    font-family: 'Lato', sans-serif;
+    font-size: 21px;
+    color: #2C2C2C;
+    line-height: 1.2;
+    font-weight: 900;
+}
+
+.benefits-list__text {
+    font-size: 15px;
+    line-height: 1.4;
+    color: #585858;
+}
+
+
+
 
