--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,7 @@ body {
 
     font-family: 'PT Sans', sans-serif;
     font-size: 15px;
+    line-height: 1.4;
     color: #585858;
 }
 
@@ -164,7 +165,6 @@ ul, ol {
 .request-form__text {
     font-size: 15px;
     color: #fff;
-    line-height: 1.4;
 }
 
 .request-form__content {
@@ -256,6 +256,10 @@ ul, ol {
     background: url("../images/map.svg") no-repeat left 30px top 130px;
 }
 
+.section--gray {
+    background-color: #F9F9F9;
+}
+
 .section__title {
     margin-bottom: 40px;
 
@@ -319,7 +323,6 @@ ul, ol {
     margin-bottom: 20px;
 
     font-size: 15px;
-    line-height: 1.4;
     color: #585858;
 }
 
@@ -531,8 +534,69 @@ ul, ol {
 
 .benefits-list__text {
     font-size: 15px;
-    line-height: 1.4;
     color: #585858;
+}
+
+
+/* Team */
+
+.team {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 -15px;
+}
+
+.team__col {
+    width: 33.33333%;
+    padding: 0 15px;
+}
+
+.team__photo {
+    margin-bottom: 13px;
+
+    box-shadow: 10px 5px 13px rgba(0, 0, 0, .16);
+}
+
+.team__name {
+    margin-bottom: 5px;
+
+    font-family: 'Lato', sans-serif;
+    font-size: 18px;
+    line-height: 1.2;
+    color: #2C2C2C;
+    font-weight: 900;
+}
+
+.team__prof {
+    margin-bottom: 11px;
+
+    font-size: 15px;
+    color: #585858;
+}
+
+.team__contacts {
+    font-size: 14px;
+    line-height: 1.2;
+    color: #585858;
+}
+
+.team__contacts li {
+    margin-bottom: 9px;
+}
+
+.team__contacts a {
+    color: inherit;
+    text-decoration: none;
+}
+
+.team__contacts a:hover {
+    text-decoration: underline;
+}
+
+.team__contacts-icon {
+    width: 16px;
+    height: auto;
+    margin-right: 7px;
 }
 
 
