--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -226,6 +226,8 @@ ul, ol {
     display: inline-block;
     vertical-align: middle;
     padding: 15px 45px;
+    position: relative;
+    overflow: hidden;
 
     font-family: 'PT Sans', sans-serif;
     font-size: 18px;
@@ -241,6 +243,32 @@ ul, ol {
     border-radius: 5px;
 }
 
+.btn:before {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 100%;
+
+    background: #000;
+    opacity: 0;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+
+    transition: opacity .1s linear;
+}
+
+.btn span {
+    position: relative;
+    z-index: 2;
+}
+
+.btn:hover:before {
+    opacity: .3;
+}
+
 .btn--block {
     display: block;
     width: 100%;
@@ -248,6 +276,10 @@ ul, ol {
 
 .btn--orange {
     background-image: linear-gradient(to right, #FF903E, #FF2C2C)
+}
+
+.btn--shadow {
+    box-shadow: 0 10px 15px rgba(0, 0, 0, .2);
 }
 
 /* Section */
@@ -663,4 +695,51 @@ ul, ol {
 .mission__subtitle {
     font-size: 21px;
     color: #585858;
+}
+
+/* article */
+
+.article {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-bottom: 30px;
+}
+
+.article__item {
+    width: 100%;
+    max-width: 500px;
+    margin-bottom: 20px;
+}
+
+.article__title {
+    margin-bottom: 15px;
+
+    font-size: 18px;
+    font-weight: 700;
+    color: #2C2C2C;
+}
+
+
+.article__title a {
+    color: inherit;
+    text-decoration: none;
+}
+
+.article__title a:hover {
+    text-decoration: underline;
+}
+
+.article__text {
+    margin-bottom: 15px;
+
+    font-size: 15px;
+    color: #585858;
+}
+
+.article__date {
+    display: block;
+
+    font-size: 12px;
+    color: #6E6E6E;
 }
