--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -743,3 +743,58 @@ ul, ol {
     font-size: 12px;
     color: #6E6E6E;
 }
+
+
+/* Footer */
+
+.footer {
+    padding: 40px 0;
+    margin-top: 60px;
+
+    background-color: #F9F9F9;
+    background-image: url(../images/left-track.svg),
+                      url(../images/right-track.svg);
+    background-repeat: no-repeat;
+    background-position: left -60px bottom -80px, right -60px bottom -80px;
+
+    text-align: center;
+}
+
+.footer__contakts {
+    margin: 25px 0;
+
+    font-size: 12px;
+    font-weight: 700;
+    text-align: center;
+    color: #585858;
+    font-style: normal;
+}
+
+.footer__contakts p {
+    margin: 0;
+}
+
+
+.footer__contakts a {
+    color: inherit;
+    text-decoration: none;
+}
+
+.footer__contakts a:hover {
+    text-decoration: underline;
+}
+
+.footer__nav {
+    font-size: 12px;
+}
+
+.footer__nav a {
+    margin: 0 5px;
+
+    color: #004AF2;
+    text-decoration: none;
+}
+
+.footer__nav a:hover {
+    text-decoration: underline;
+}
