--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,6 +52,13 @@ ul, ol {
     padding: 0 15px;
 }
 
+/* Page */
+.page {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
 /* Header */
 .header {
     width: 100%;
@@ -112,6 +119,11 @@ ul, ol {
 .intro--blog {
     height: 350px;
     background: #000 url("../images/blog-bg.jpg") no-repeat center / cover;
+}
+
+.intro--text {
+    height: 350px;
+    background: #000 url("../images/text-bg.jpg") no-repeat center / cover;
 }
 
 .intro__inner {
@@ -345,6 +357,10 @@ ul, ol {
 
 .section--gray {
     background-color: #F9F9F9;
+}
+
+.section--last {
+    margin-bottom: 60px;
 }
 
 .section__title {
@@ -811,7 +827,7 @@ ul, ol {
 
 .footer {
     padding: 40px 0;
-    margin-top: 60px;
+    margin-top: auto;
 
     background-color: #F9F9F9;
     background-image: url(../images/left-track.svg),
@@ -986,3 +1002,90 @@ ul, ol {
 .main__col {
     width: 50%;
 }
+
+/* Text */
+
+.text {
+    max-width: 890px;
+    margin-bottom: 50px;
+
+    font-size: 18px;
+    line-height: 1.5;
+    color: #585858;
+}
+
+.text p {
+    margin-bottom: 20px;
+}
+
+
+.text h2,
+.text h3,
+.text h4,
+.text h5,
+.text h6 {
+    margin-bottom: 20px;
+
+    font-weight: 700;
+    color: #2C2C2C;
+}
+
+.text h2 {
+    font-size: 27px;
+}
+
+.text h3 {
+    font-size: 24px;
+}
+
+.text h4 {
+    font-size: 21px;
+}
+
+.text h5 {
+    font-size: 18px;
+}
+
+.text h6 {
+    font-size: 15px;
+}
+
+.text ul,
+.text ol {
+    margin-bottom: 20px;
+
+}
+
+.text ol {
+    list-style: decimal;
+    list-style-position: inside;
+
+}
+
+.text hr {
+    display: block;
+    width: 100%;
+    height: 1px;
+    margin: 40px 0;
+
+    border: 0;
+    background-color: #d1d1d1;
+}
+
+.text img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+.text a {
+    text-decoration: none;
+    color: #004AF2;
+}
+
+.text a:hover {
+    text-decoration: underline;
+}
+
+
+
