--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,7 +73,7 @@ ul, ol {
 }
 
 .header--dark {
-    background-color: rgba(0, 0, 0, .8);
+    background-color: rgba(0, 0, 0, .9);
 }
 
 .header__inner {
@@ -106,6 +106,16 @@ ul, ol {
 
 .nav__link.active {
     background-color: #004AF2;
+}
+
+/* Burger */
+
+.burger {
+    padding: 0;
+    background: none;
+    border: 0;
+
+    display: none;
 }
 
 /* Intro */
@@ -1086,6 +1096,47 @@ ul, ol {
 .text a:hover {
     text-decoration: underline;
 }
+
+
+/* Media Queries */
+
+@media (max-width: 767px) {
+    .header__inner {
+        height: 50px;
+    }
+
+    .nav {
+        display: none;
+        width: 100%;
+        height: auto;
+        min-height: calc(100vh - 50px);
+        padding-top: 9px;
+        flex-direction: column;
+
+        background-color: rgba(0, 0, 0, .85);
+
+        position: absolute;
+        top: 100%;
+        left: 0;
+        right: 0;
+        z-index: 1;
+    }
+
+    .nav__link {
+        display: block;
+        padding: 10px 15px;
+        text-align: right;
+    }
+
+    .burger {
+        display: block;
+    }
+
+}
+
+
+
+
 
 
 
