--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1101,9 +1101,14 @@ ul, ol {
 /* Media Queries */
 
 @media (max-width: 767px) {
+
+/* Header */
+
     .header__inner {
         height: 50px;
     }
+
+/* Nav */
 
     .nav {
         display: none;
@@ -1132,6 +1137,52 @@ ul, ol {
         display: block;
     }
 
+/* Intro */
+
+    .intro__inner {
+        flex-direction: column;
+        align-items: center;
+        height: auto;
+        padding-top: 75px;
+        padding-bottom: 25px;
+    }
+
+    .intro__text {
+        order: 1;
+        width: 100%;
+        text-align: center;
+        margin-bottom: 20px;
+    }
+
+    .intro__title {
+        font-size: 90px;
+    }
+
+    .intro__titile-amp {
+        font-size: 120px;
+
+        right: auto;
+        left: 50%;
+        transform: translate3d(-50%, -50%, 0)
+    }
+
+/* Request form */
+
+    .request-form--intro {
+        order: 2;
+        position: static;
+    }
+
+}
+
+@media (max-width: 575px) {
+    .intro__title {
+        font-size: 60px;
+    }
+
+    .intro__titile-amp {
+        font-size: 90px;
+    }
 }
 
 
