Media News and Footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -778,9 +778,8 @@ ul, ol {
 
 .article {
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
-    margin-bottom: 30px;
+    margin: 0 -15px 30px;
 }
 
 .atcicle--column {
@@ -798,6 +797,7 @@ ul, ol {
     width: 100%;
     max-width: 500px;
     margin-bottom: 20px;
+    padding: 0 15px;
 }
 
 .article__title {
@@ -1102,6 +1102,19 @@ ul, ol {
 
 @media (max-width: 991px) {
 
+/* Intro */
+    .intro__title {
+        font-size: 90px;
+    }
+
+    .intro__titile-amp {
+        font-size: 120px;
+
+        right: auto;
+        left: 50%;
+        transform: translate3d(-50%, -50%, 0)
+    }
+
 /* Section */
     .section__title {
         text-align: center;
@@ -1138,6 +1151,13 @@ ul, ol {
     .clients__list li {
         max-width: 130px;
     }
+
+/* Footer */
+    .footer {
+        background-size: 330px auto;
+        background-position: left -30px bottom -30px, right -30px bottom -30px;
+    }
+
 }
 
 @media (max-width: 767px) {
@@ -1196,15 +1216,11 @@ ul, ol {
     }
 
     .intro__title {
-        font-size: 90px;
+        font-size: 70px;
     }
 
     .intro__titile-amp {
-        font-size: 120px;
-
-        right: auto;
-        left: 50%;
-        transform: translate3d(-50%, -50%, 0)
+        font-size: 100px;
     }
 
 /* Request form */
@@ -1246,6 +1262,41 @@ ul, ol {
         max-width: 370px;
         margin: 0 auto;
     }
+
+/* Mission */
+    .missin-title {
+        font-size: 70px;
+    }
+
+    .mission {
+        padding: 40px 20px;
+        margin-top: -16px;
+    }
+
+    .mission__title {
+        font-size: 24px;
+    }
+
+    .mission__subtitle {
+        font-size: 18px;
+    }
+
+/* Article */
+    .article {
+        flex-wrap: wrap;
+    }
+
+    .article__item {
+        max-width: none;
+    }
+
+    /* Footer */
+    .footer {
+        background-size: 250px auto;
+        background-position: left -20px bottom -30px, right -20px bottom -30px;
+    }
+
+
 }
 
 @media (max-width: 575px) {
@@ -1258,8 +1309,20 @@ ul, ol {
     }
 
 /* Services */
+    .services {
+        padding-top: 50px;
+        padding-bottom: 10px;
+    }
+
     .services__main-title {
+        width: 100%;
+
         font-size: 60px;
+        text-align: center;
+
+        bottom: auto;
+        right: auto;
+        top: 5px;
     }
 
     .services__item {
@@ -1271,8 +1334,22 @@ ul, ol {
         padding: 30px 0;
     }
 
+    .section--last {
+        margin-bottom: 30px;
+    }
+
     .section__title {
         font-size: 35px;
+    }
+
+/* Request form */
+    .request-form__header,
+    .request-form__content {
+        padding: 20px;
+    }
+
+    .request-form-title {
+        font-size: 25px;
     }
 
 /* Clients */
@@ -1291,6 +1368,40 @@ ul, ol {
         margin: 0 auto;
     }
 
+    /* Mission */
+    .missin-title {
+        font-size: 40px;
+    }
+
+    .mission {
+        padding: 30px 20px;
+        margin-top: -10px;
+    }
+
+    .mission__title {
+        font-size: 20px;
+    }
+
+    .mission__subtitle {
+        font-size: 16px;
+    }
+
+/* Footer */
+    .footer {
+        background-position: left -120px bottom -80px, right -120px bottom -80px;
+    }
+
+}
+
+
+@media (max-width: 320px) {
+    .intro__title {
+        font-size: 40px;
+    }
+
+    .intro__title-amp {
+        font-size: 50px;
+    }
 }
 
 
