--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,6 +102,8 @@ ul, ol {
 
     color: #fff;
     text-decoration: none;
+
+    transition: background .2s linear;
 }
 
 .nav__link:not(.active):hover {
