--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@ body {
     -moz-osx-font-smoothing: greyscale;
 }
 
-body.no-scrol {
+body.no-scroll {
     overflow: hidden;
 }
 
@@ -918,7 +918,7 @@ ul, ol {
 }
 
 .modal.show {
-    display: flex;
+    display: block;
 }
 
 .modal__inner {
@@ -935,6 +935,10 @@ ul, ol {
     position: relative;
 
     background-color: #fff;
+    opacity: 0;
+
+    transform: scale(0.5);
+    transition: transform .2s ease-out, opacity .2s ease-out;
 }
 
 .modal__header {
@@ -1014,6 +1018,10 @@ ul, ol {
     z-index: 1;
 
     transition: transform .2s linear;
+}
+
+.modal__close:focus {
+    outline: none;
 }
 
 .modal__close:hover {
