--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,8 +129,6 @@ ul, ol {
 .intro {
     position: relative;
     margin-bottom: 30px;
-
-    background: #000;
 }
 
 .intro--blog {
@@ -148,10 +146,24 @@ ul, ol {
     height: 100%;
     overflow: hidden;
 
+    background: #04222a url("../images/intro bg.jpg") no-repeat center / cover;
+
     position: absolute;
     top: 0;
     left: 0;
     z-index: 1;
+}
+
+.intro__slider .slider-item {
+    display: none;
+}
+
+.intro__slider.slick-initialized {
+    background: #04222a;
+}
+
+.intro__slider.slick-initialized .slider-item {
+    display: block;
 }
 
 .intro__slider .slick-list,
@@ -160,7 +172,7 @@ ul, ol {
 }
 
 
-.intro__slider-photo {
+.intro__slider-item {
     display: block;
     width: 100%;
     height: 100%;
@@ -587,6 +599,14 @@ ul, ol {
 
 .reviews {
     position: relative;
+    height: 200px;
+
+    background: url("../images/ajax-loader.gif") no-repeat center;
+}
+
+.reviews.slick-initialized {
+    background: none;
+    height: auto;
 }
 
 .reviews:before,
@@ -659,6 +679,7 @@ ul, ol {
 }
 
 .reviews__item {
+    display: none;
     padding: 0 10px;
     padding-top: 20px;
 }
@@ -1308,7 +1329,7 @@ ul, ol {
 /* Clients */
     .clients {
         flex-direction: column;
-        margin-bottom: 30px;
+        margin-bottom: 60px;
     }
 
     .clients__logo,
@@ -1384,6 +1405,8 @@ ul, ol {
 /* Intro */
     .intro {
         margin-bottom: 0;
+
+        background: #04222a;
     }
 
     .intro__inner {
@@ -1407,6 +1430,10 @@ ul, ol {
 
     .intro__titile-amp {
         font-size: 100px;
+    }
+
+    .intro__slider-arrows {
+        display: none;
     }
 
 /* Request form */
@@ -1572,6 +1599,12 @@ ul, ol {
 
     .clients__list-logo {
         margin: 0 auto;
+    }
+
+    .clients-love {
+        display: block;
+        margin-left: 0;
+        margin-top: 20px;
     }
 
     /* Mission */
