--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,6 +90,29 @@ body.show-nav .header{
     height: 85px;
 }
 
+.header__logo {
+    text-decoration: none;
+    color: #fff;
+}
+
+.header__logo img {
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.header__logo-text {
+    font-size: 15px;
+    font-weight: 700;
+
+    margin-left: 11px;
+    position: relative;
+    top: 2px;
+}
+
+.header__logo-black {
+    color: #2C2C2C;
+}
+
 /* Nav */
 
 .nav {
@@ -384,6 +407,9 @@ body.show-nav .header{
     background: none;
     border: none;
     border-bottom: 1px solid rgba(255, 255, 255, .25);
+    border-radius: 0;
+    appearance: none;
+    box-shadow: none;
 
     font-family: 'PT Sans', sans-serif;
     font-size: 16px;
